fixed home and login screen not fitting properly

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -12,6 +12,10 @@
   overflow: hidden;
 }
 
+.row {
+  --bs-gutter-x: 0;
+}
+
 .brand-title {
   font-weight: 900;
   color: var(--text-color);
